css divs challenge

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS My Site</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="images/favicon.ico" />
   </head>
 
   <body>
-    <h1>CSS My Site</h1>
+    <div class="top-container">
+      <h1 class="header">Im Mahmoud.</h1>
+      <p class="header sub">a programmer.</p>
+    </div>
+    <div class="middle-container"></div>
+    <div class="bottom-container"></div>
   </body>
 </html>
