--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="top-container">
-      <h1 class="header">Im Mahmoud.</h1>
+      <h1 class="header">I'm Mahmoud.</h1>
       <p class="header sub">a programmer.</p>
     </div>
     <div class="middle-container"></div>
