--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
   <body>
     <div class="top-container">
+      <img src="images/CSS - My Site Images/cloud.png" alt="cloud-img" />
       <h1 class="header">I'm Mahmoud.</h1>
-      <p class="header sub">a programmer.</p>
+      <p class="header sub">a <span class="pro">pro</span>grammer.</p>
+      <img src="images/CSS - My Site Images/cloud.png" alt="cloud-img" />
+      <img src="images/CSS - My Site Images/mountain.png" alt="mountain-img" />
     </div>
     <div class="middle-container"></div>
     <div class="bottom-container"></div>
